--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "firebase-admin": "^7.0.0",
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
