--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "firebase-admin": "^7.0.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "fcm-node": "^1.2.1"
   },
   "devDependencies": {
     "request": "^2.81.0",
